Add amsmath support
This fixes #223.

--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -41,6 +41,9 @@
     {% if mathjax %}
     <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
+      TeX: {
+        extensions: ['AMSMath.js', 'AMSSymbols.js']
+      },
       tex2jax: {
         inlineMath: [['$','$'], ['\\(','\\)']],
         displayMath: [['$$','$$'], ['\\[','\\]']]
