Refactor edit form.
Rewrites most of the edit form handling.

There were some bugs with the previous spaghetti, especially when
making an edit which caused a validation error. When rendering a form
with a validation error, fields were displayed incorrectly.

It also fixes several issues with merge conflicts.

To fix this issue properly I had to rewrite most of the form handling,
so here.

--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -1194,6 +1194,13 @@ input::-moz-focus-inner {
   border: solid 6px;
   border-color: transparent transparent #a01d2b transparent;
 }
+.error-banner {
+  border-radius: 2px;
+  background: #a01d2b;
+  margin: 10px 0;
+  padding: 5px;
+  color: #fff;
+}
 
 .button {
   zoom: 1;
