Show last updated in words on front page.

--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -24,6 +24,7 @@
     <script src=//cdnjs.cloudflare.com/ajax/libs/jquery/1.10.1/jquery.min.js></script>
 
     {% compress js %}
+    <script src={{STATIC_URL}}js/moment.min.js></script>
     <script src={{STATIC_URL}}js/bootstrap.min.js></script>
     <script src={{STATIC_URL}}codemirror/codemirror.min.js></script>
     <script src="{{STATIC_URL}}google-code-prettify/prettify.js"></script>
