--- a/wikipendium/wiki/templates/writing_guide.html
+++ b/wikipendium/wiki/templates/writing_guide.html
@@ -8,6 +8,9 @@
         <a href=#links-and-images-tab>Links & Images</a>
     </li>
     <li>
+        <a href=#footnotes-tab>Footnotes</a>
+    </li>
+    <li>
         <a href=#code-tab>Code</a>
     </li>
     <li>
@@ -82,6 +85,17 @@ and it will still be the same blockquote.</code></pre>
         <pre><code>[Section Name](#section-name)</code></pre>
         <h4>Images</h4>
         <pre><code>![Alt text](http://url.to/image.png)</code></pre>
+    </div>
+
+    <div class=tab id="footnotes-tab">
+        <h4>Footnotes</h4>
+        <pre><code>You can have footnotes[^footnote] in your text<br />
+[^footnote]: A footnote may be referenced and explained like this anywhere in the document.
+        </code></pre>
+        Keeping footnotes close to where you mention them helps for readability.
+        All footnotes will be presented on the bottom of the article no matter where they are defined.
+        <pre><code>[^footnote]: [A footnote can for instance be a link](http://footnote.com/)
+        </code></pre>
     </div>
 
     <div class=tab id="tables-tab">
