Fix create links on error page URLs
Updates the links on the pages for:
- Article code doesn't exist
- Language isn't available

Fixes #289

--- a/wikipendium/wiki/templates/missing_language.html
+++ b/wikipendium/wiki/templates/missing_language.html
@@ -16,7 +16,7 @@
         {% endif %}
     </div>
 
-    <h2>Or read it in:</h2>
+    <h2>Read it in:</h2>
     <ul class=no-list>
     {% for language_name, url in available_languages %}
         <li>
