--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -93,9 +93,16 @@
         <div id="push"></div>
     </div>
     <footer id="page-footer">
-            <div class="container" style=font-variant:small-caps>
-                <a href=mailto:contact@wikipendium.no style=float:left>Contact</a>
-                <a href=/>Wikipendium</a> <a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank">cc-by-sa</a>
+        <div class="container" style=font-variant:small-caps>
+            <ul class=bottom-menu>
+                <li><a href=mailto:contact@wikipendium.no>Contact</a></li>
+                <li><a href=http://twitter.com/wikipendium/>Twitter</a></li>
+                <li><a href=http://github.com/stianjensen/wikipendium.no/issues>Report a bug</a></li>
+                <li>
+                    <a href=/>Wikipendium</a>
+                    <a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank">cc-by-sa</a>
+                </li>
+            </ul>
         </div>
     </footer>
 
