--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -47,6 +47,9 @@
       tex2jax: {
         inlineMath: [['$','$'], ['\\(','\\)']],
         displayMath: [['$$','$$'], ['\\[','\\]']]
+      },
+      "HTML-CSS": {
+        linebreaks: {automatic: true, width: "container"}
       }
     });
     </script>
@@ -60,9 +63,9 @@
             <div class=container>
                 <header id="header" class=row>
                     <h1 class="float-left serif"><a class=header-logo-link href=/>
-                        {% block logo %}Wikipendium{% endblock %}
+                        W<span class=ikipendium>ikipendium</span>
                     </a></h1>
-                    <nav class="float-right">
+                    <nav>
                     {% block nav %}
                     {% endblock %}
                     {% if request.user.is_authenticated %}
@@ -76,7 +79,7 @@
         </ul>
     </div>
                     {% else %}
-                    <a class=button href="/accounts/login/?next={{request.path}}"><i class="icon icon-prepend"></i>Not logged in</a>
+                    <a class=button href="/accounts/login/?next={{request.path}}">Log in</a>
                     {% endif %}
                     </nav>
                 </header>
