Add timestamp to article template.

--- a/wikipendium/wiki/templates/article.html
+++ b/wikipendium/wiki/templates/article.html
@@ -33,4 +33,8 @@
         </div>
     {% endfor %}
 </div>
+
+<div class=last-updated>
+    {{ articleContent.updated|date:"r" }}
+</div>
 {% endblock %}
