--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2193,6 +2193,11 @@ body.frontpage:before {
     margin-top: -50px;
 }
 
+body.article .contributors,
+body.article .last-updated {
+    margin-bottom: 10px;
+}
+
 h1,h2,h3,h4,h5,h6{
     font-weight:bold;
     margin: 0 0 8px;
