--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -49,7 +49,8 @@
       },
       tex2jax: {
         inlineMath: [['$','$'], ['\\(','\\)']],
-        displayMath: [['$$','$$'], ['\\[','\\]']]
+        displayMath: [['$$','$$'], ['\\[','\\]']],
+        processEscapes: true
       },
       "HTML-CSS": {
         linebreaks: {automatic: true, width: "container"}
