--- a/wikipendium/wiki/templates/writing_guide.html
+++ b/wikipendium/wiki/templates/writing_guide.html
@@ -71,6 +71,13 @@ and it will still be the same blockquote.</code></pre>
     1. properly
 6. and continue with the right numbers here</code></pre>
 
+        <h4>Definition lists</h4>
+        <pre><code>Apple
+:   Something you can eat
+
+Car
+:   Something you cannot eat</code></pre>
+
     </div>
 
     <div class=tab id="links-and-images-tab">
