Fix syntax highlighting issues in codemirror
This updates codemirror to the latest version and closes #230

It will also properly respect escaped dollar signs.

It takes advantage of the more appropriate multiplexing mode in
codemirror. This means that while in math mode the markdown parser will
ignore all characters. With the overlay mode we're currently using, a
"_" or "*" character inside math will cause the markdown syntax
highlighting to activate italic text. Multiplexing resolves this issue.

Finally, it introduces highlighting of latex/math, so it's easier to
spot syntax issues here as well, and less green overall.

--- a/wikipendium/wiki/static/codemirror/wikipendium.css
+++ b/wikipendium/wiki/static/codemirror/wikipendium.css
@@ -17,9 +17,15 @@
 .cm-s-wikipendium span.cm-tag {color: #3F7F7F;}
 .cm-s-wikipendium span.cm-attribute {color: #7F007F;}
 .cm-s-wikipendium span.cm-link {color: #069;}
+.cm-s-wikipendium span.cm-quote {font-style: italic;}
 
-.cm-mathjax-inline,
-.cm-mathjax-block {
+.cm-mathjax-delimit {
+    color: #4CA828;
+    font-weight: bold;
+}
+
+.cm-s-wikipendium span.cm-mathjax-inline.cm-variable-2,
+.cm-s-wikipendium span.cm-mathjax-block.cm-variable-2 {
     color: #4CA828;
 }
 
