--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -27,6 +27,8 @@
     <script src={{STATIC_URL}}js/moment.min.js></script>
     <script src={{STATIC_URL}}js/bootstrap.min.js></script>
     <script src={{STATIC_URL}}codemirror/codemirror.min.js></script>
+    <script src={{STATIC_URL}}codemirror/multiplex.custom.js></script>
+    <script src={{STATIC_URL}}codemirror/mathjax.js></script>
     <script src="{{STATIC_URL}}google-code-prettify/prettify.js"></script>
     <script src="{{STATIC_URL}}chosen/chosen.jquery.min.js"></script>
     <script src={{STATIC_URL}}js/script.js></script>
