--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -100,8 +100,8 @@
         <div id="push"></div>
     </div>
     <footer id="page-footer">
-        <div class="container" style=font-variant:small-caps>
-            <ul class=bottom-menu>
+        <div class="container">
+            <ul class=bottom-menu style=font-variant:small-caps>
                 <li><a href=mailto:contact@wikipendium.no>Contact</a></li>
                 <li><a href=http://twitter.com/wikipendium/>Twitter</a></li>
                 <li><a href=http://github.com/stianjensen/wikipendium.no/issues>Report a bug</a></li>
@@ -110,6 +110,34 @@
                     <a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank">cc-by-sa</a>
                 </li>
             </ul>
+
+            <div class=donation-appeal>
+              Wikipendium is ad-free and costs nothing to use.
+              Please help keep Wikipendium alive by donating today!
+              <form
+                action=https://www.paypal.com/cgi-bin/webscr
+                method=post
+                target=_top
+                >
+                <input
+                  type=hidden
+                  name=cmd
+                  value=_s-xclick
+                  />
+                <input
+                  type=hidden
+                  name=encrypted
+                  value="{{ PAYPAL_DONATION_PKCS7 }}"
+                  />
+                <input
+                  type=image
+                  src=https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif
+                  border=0
+                  name=submit
+                  alt="PayPal - The safer, easier way to pay online!"
+                  />
+              </form>
+            </div>
         </div>
     </footer>
 
