--- a/wikipendium/wiki/templates/history.html
+++ b/wikipendium/wiki/templates/history.html
@@ -4,7 +4,7 @@
 History: {{ article.slug }} –  
 {% endblock %}
 
-{% block body_class %}article{% endblock %}
+{% block body_class %}fixed-header{% endblock %}
 
 {% block nav %}
 <a class=button href="{{ back_url }}">Article</a>
