--- a/wikipendium/wiki/templates/missing_language.html
+++ b/wikipendium/wiki/templates/missing_language.html
@@ -3,7 +3,7 @@
 
 {% block title %}This article is not available in this language -{% endblock %}
 
-{% block body_class %}article{% endblock %}
+{% block body_class %}article fixed-header{% endblock %}
 
 {% block content %}
 <div id=article class=serif>
