--- a/wikipendium/wiki/templates/history_single.html
+++ b/wikipendium/wiki/templates/history_single.html
@@ -4,7 +4,7 @@
 Diff: {{ ac.article.slug }} – 
 {% endblock %}
 
-{% block body_class %}article{% endblock %}
+{% block body_class %}fixed-header{% endblock %}
 
 {% block nav %}
 <div class=button-group style=inline-block>
