Prevent contribution history toggle when clicking on article anchor Fix based on http://stackoverflow.com/a/1369080/2319697

--- a/wikipendium/user/templates/user/profile.html
+++ b/wikipendium/user/templates/user/profile.html
@@ -42,6 +42,10 @@
 </div>
 <script>
     $(function(){
+        $('.click-to-expand a').click(function(e){
+            e.stopPropagation();
+        });
+
         $('.click-to-expand').click(function(){
             console.log($(this).next());
             $(this).next().toggle();
