--- a/wikipendium/wiki/templates/history_single.html
+++ b/wikipendium/wiki/templates/history_single.html
@@ -21,10 +21,12 @@ Diff: {{ ac.article.slug }} –
 
 <div style=overflow:hidden>
 {% if prev_ac %}
-<a class="button" id="prev-button" href={{prev_ac.get_history_single_url}}>Previous version</a>
+<a class="button" id="prev-button" href={{prev_ac.get_history_single_url}}
+   title="Keyboard shortcut: Left arrow">Previous version</a>
 {% endif %}
 {% if next_ac %}
-<a class="button float-right" id="next-button" href={{next_ac.get_history_single_url}}>Next version</a>
+<a class="button float-right" id="next-button" href={{next_ac.get_history_single_url}}
+   title="Keyboard shortcut: Right arrow">Next version</a>
 {% endif %}
 </div>
 
