Add meta description tag on front page

--- a/wikipendium/wiki/templates/index.html
+++ b/wikipendium/wiki/templates/index.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block meta %}
+<meta name="description" content="Compendiums edited as a wiki">
+{% endblock %}
+
 {% block body_class %}frontpage{% endblock %}
 
 {% block nav %}
