Improve article header on small screens
This commit shoves some of the article header buttons into a dropdown
menu on small screens. This lets the header take up less space
on-screen, freeing up valuable screen real-estate.

--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2218,6 +2218,10 @@ body.fixed-header #content {
     padding-top: 50px;
 }
 
+.article-nav {
+    display: inline-block;
+}
+
 @media all and (max-width: 650px) {
     body.fixed-header #content {
         padding-top: 75px;
