Add search/replace addon to editor

--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -16,6 +16,7 @@
     {% compress css %}
     <link rel=stylesheet href={{STATIC_URL}}css/master.css />
     <link rel=stylesheet href={{STATIC_URL}}codemirror/codemirror.css />
+    <link rel=stylesheet href={{STATIC_URL}}codemirror/dialog.css />
     <link rel=stylesheet href={{STATIC_URL}}codemirror/wikipendium.css />
     <link href="{{STATIC_URL}}google-code-prettify/prettify.css?autoload=false" rel="stylesheet" />
     <link rel=stylesheet href={{STATIC_URL}}chosen/chosen.min.css />
@@ -31,6 +32,10 @@
     <script src={{STATIC_URL}}codemirror/codemirror.min.js></script>
     <script src={{STATIC_URL}}codemirror/multiplex.custom.js></script>
     <script src={{STATIC_URL}}codemirror/mathjax.js></script>
+    <script src={{STATIC_URL}}codemirror/search.js></script>
+    <script src={{STATIC_URL}}codemirror/searchcursor.js></script>
+    <script src={{STATIC_URL}}codemirror/dialog.js></script>
+
     <script src="{{STATIC_URL}}google-code-prettify/prettify.js"></script>
     <script src="{{STATIC_URL}}chosen/chosen.jquery.min.js"></script>
     <script src={{STATIC_URL}}js/script.js></script>
