--- a/wikipendium/wiki/templates/writing_guide.html
+++ b/wikipendium/wiki/templates/writing_guide.html
@@ -16,6 +16,9 @@
     <li>
         <a href=#tables-tab>Tables</a>
     </li>
+    <li>
+        <a href=#keyboard-tab>Keyboard Shortcuts</a>
+    </li>
 </ul>
 <div class=tab-container id="help-tabs-container">
     <div class="tab active" id="general-tab">
@@ -123,6 +126,22 @@ Car
         <p>Yes, you may have just short bits of code scattered around your text.
         You get it by surround your code with a grave accent <em>(which is douche for backtick)</em>.
         Here's an <code>`example`</code>.</p>
+    </div>
+
+    <div class=tab id="keyboard-tab">
+        <h4>Search</h4>
+        <dl>
+          <dt>Ctrl-F / Cmd-F</dt>
+          <dd>Start searching</dd>
+          <dt>Ctrl-G / Cmd-G</dt>
+          <dd>Find next</dd>
+          <dt>Shift-Ctrl-G / Shift-Cmd-G</dt>
+          <dd>Find previous</dd>
+          <dt>Shift-Ctrl-F / Cmd-Option-F</dt>
+          <dd>Replace</dd>
+          <dt>Shift-Ctrl-R / Shift-Cmd-Option-F</dt>
+          <dd>Replace all</dd>
+        </dl>
     </div>
 
 </div>
