--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -29,6 +29,7 @@
     {% compress js %}
     <script src={{STATIC_URL}}js/moment.min.js></script>
     <script src={{STATIC_URL}}js/bootstrap.min.js></script>
+    <script src={{STATIC_URL}}js/jquery.mousewheel.js></script>
     <script src={{STATIC_URL}}codemirror/codemirror.min.js></script>
     <script src={{STATIC_URL}}codemirror/multiplex.custom.js></script>
     <script src={{STATIC_URL}}codemirror/mathjax.js></script>
