Shrink text on printing
This fixes #339.

--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2853,6 +2853,10 @@ input[readonly=True]{
  * PRINTING
 *******************/
 @media print {
+    body {
+      font-size: 10px;
+    }
+
     body.fixed-header .header-wrapper {
         position: relative;
         -webkit-box-shadow: none;
