--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -86,6 +86,7 @@
         <ul class="dropdown right">
             <li><a href=/users/{{request.user.username}}/>Profile</a></li>
             <li><a href=/accounts/password/change/>Change password</a></li>
+            <li><a href=/accounts/email/change/>Change email</a></li>
             <li><a href=/accounts/logout/>Log out</a></li>
         </ul>
     </div>
